[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sounds/Menu.mp3" type="AudioStream" id=2]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.0588235, 0.0352941, 0.172549, 0.866667 )

[node name="Play" type="Button" parent="ColorRect"]
margin_left = 500.0
margin_top = 196.0
margin_right = 769.0
margin_bottom = 288.0
custom_colors/font_color = Color( 0.894118, 0.894118, 0, 1 )
text = "Play"

[node name="Exit" type="Button" parent="ColorRect"]
margin_left = 506.0
margin_top = 500.0
margin_right = 775.0
margin_bottom = 592.0
custom_colors/font_color = Color( 1, 0.898039, 0, 1 )
text = "Exit"

[node name="Label" type="Label" parent="ColorRect"]
margin_left = 500.0
margin_top = 84.0
margin_right = 592.0
margin_bottom = 104.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Space Battle"

[node name="Reset" type="Button" parent="ColorRect"]
margin_left = 500.0
margin_top = 353.0
margin_right = 769.0
margin_bottom = 445.0
custom_colors/font_color = Color( 1, 0.898039, 0, 1 )
text = "Settings"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true
bus = "Music"

[connection signal="pressed" from="ColorRect/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="ColorRect/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="ColorRect/Reset" to="." method="_on_Button_pressed"]
